# covid19-forecaster

./: .flake8  .gitignore  .pre-commit-config.yaml  COVID Budget Impact Analysis.xlsx  Pipfile  README.md  mypy.ini  pyproject.toml  run_forecasts.py  setup.py
covid19_forecaster/: __init__.py  core.py  data.py  forecasters.py  io.py  run.py  utils.py
covid19_forecaster/baseline/: __init__.py  core.py  forecast.py  fyp.py  sales.py  transformers.py
covid19_forecaster/data/projections/: amusement.pickle  birt.pickle  npt.pickle  parking.pickle  rtt.pickle  sales.pickle  soda.pickle  wage.pickle
covid19_forecaster/data/rates/: birt.csv  npt.csv  parking.csv  rtt.csv  sales.csv  wage.csv
covid19_forecaster/data/revenue-reports/: birt-by-sector.csv  birt_by_sector.csv  monthly-collections-tax.csv  monthly-collections_non_tax.csv  monthly-collections_other_govts.csv  monthly-collections_tax.csv  sales-by-sector.csv  wage-by-sector.csv  wage_by_sector.csv
covid19_forecaster/taxes/: __init__.py  amusement.py  birt.py  core.py  npt.py  parking.py  rtt.py  sales.py  soda.py  wage.py
covid19_forecaster/v1/: __init__.py  amusement.py  birt.py  npt.py  parking.py  rtt.py  sales.py  soda.py  wage.py
covid19_forecaster/v2/: __init__.py  amusement.py  birt.py  npt.py  output.py  parking.py  rtt.py  sales.py  soda.py  wage.py
notebooks/: baselines.ipynb
projections/: amusement.csv  birt.csv  npt.csv  parking.csv  rtt.csv  sales.csv  soda.csv  wage.csv
results/: COVID Budget Impact Analysis (March 2021).xlsx  COVID Budget Impact Analysis.xlsx
(+6 files in other folders)
